--- a/style.css
+++ b/style.css
@@ -52,15 +52,26 @@ nav a {
   cursor: pointer;
 }
 
+nav label {
+  color: #93a1a1;
+  margin: 1vw;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 footer {
   position: fixed;
   bottom: 0;
   left: 0;
+  height: 4.25rem;
   width: 100%;
   background-color: #002b36;
   text-align: center;
-  padding: 1rem 0;
   z-index: 9999;
+}
+
+.social-links {
+  padding-top: 1.25rem;
 }
 
 .social-links a {
@@ -126,16 +137,16 @@ ul {
   right: 0; /* Align to the right */
 }
 
-.dropdown-content a {
+.dropdown-content label {
   color: #93a1a1; /* Match with nav link color */
   text-decoration: none;
   display: block;
-  padding: 1rem;
+  padding: 0.5rem;
   text-align: center;
   cursor: pointer;
 }
 
-.dropdown-content a:hover {
+.dropdown-content label:hover {
   background-color: #073642; /* Darker shade for hover */
 }
 
@@ -156,4 +167,226 @@ ul {
 
 .dropdown button:hover {
   background-color: #073642; /* Darker shade for hover */
+}
+
+/* Side menus CSS logic */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+.sidemenu-toggle:checked + .sidemenu-container .sidemenu {
+  transform: translate(0, 0);
+}
+.sidemenu-toggle:checked + .sidemenu-container .sidemenu-overlay {
+  pointer-events: all;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.sidemenu--mobile {
+  top: 4.25rem;
+  transform: translateX(-100%);
+}
+.sidemenu--cart {
+  top: 4.25rem;
+  right: 0;
+  transform: translateX(100%);
+}
+.sidemenu--top {
+  top: 4.25rem;
+  transform: translateY(-100%);
+}
+.sidemenu--bottom {
+  top: 4.25rem;
+  transform: translateY(100%);
+}
+
+/* CSS variables */
+:root {
+  --accent: rgb(170 13 79);
+  --dark: rgb(29 30 34);
+  --shadow: rgba(0,0,0,0.5);
+}
+
+/* utility classes */
+.hidden {
+  display: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.container {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.button {
+  padding: 0.3em 0.6em;
+  background: white;
+  color: var(--accent);
+  font-size: 1.5vw;
+  font-weight: 800;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.1s ease, opacity 0.1s ease;
+}
+.button:hover {
+  transform: translateY(1px);
+  opacity: 0.9;
+}
+.button--accent {
+  background: var(--accent);
+  color: white;
+}
+.button--outline {
+  background: var(--dark);
+  color: white;
+  border: solid 1px white;
+}
+.button--outline:hover {
+  filter: brightness(150%);
+  opacity: 1;
+}
+
+.text-lg {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.center-force {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Side Menus */
+
+.sidemenu {
+  position: fixed;
+  height: calc(100vh - 8rem);
+  width: 24rem;
+  max-width: 100vw;
+  background: white;
+  z-index: 10;
+  transition: transform ease 0.3s;
+  display: grid;
+  grid-auto-rows: auto 1fr auto;
+}
+
+.sidemenu h1 {
+  font-size: 1.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.sidemenu--top {
+  height: calc(100vh - 8rem);
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+}
+.sidemenu--top .sidemenu__footer-content::before {
+  height: 1rem;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 100%);
+}
+.sidemenu--bottom {
+  background: var(--dark);
+  color: white;
+  width: 100%;
+  height: calc(100vh - 8.5rem);
+}
+.sidemenu .sidemenu__header {
+  border-bottom: 1px grey solid;
+}
+.sidemenu .sidemenu__header .sidemenu__header_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.sidemenu .sidemenu__header .sidemenu__header_content--bottom .button {
+  position: absolute;
+  right: 1rem;
+}
+.sidemenu .sidemenu__body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 1.2rem;
+}
+.sidemenu .sidemenu__footer {
+  width: 100%;
+}
+.sidemenu .sidemenu__footer .sidemenu__footer-content {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.sidemenu .sidemenu__footer--top {
+  color: var(--accent);
+}
+
+
+.sidemenu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 9;
+  background: var(--shadow);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity ease 0.3s;
+}
+
+.main__content {
+  font-size: 1.2rem;
+  max-width: 65ch;
+  margin-top: 11rem;
+  margin-bottom: 6rem;
+}
+.main__content p {
+  margin-bottom: 2em;
+}
+.main__content .sparkles {
+  font-size: 3rem;
+  margin-bottom: 1.5em;
+}
+.main__content .main__buttons {
+  margin-top: 6rem;
+  max-width: 18em;
+}
+.main__content .main__buttons .button {
+  display: block;
+  font-size: 1.2rem;
+  margin-top: 1em;
+}
+#projectWindow {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.content2 {
+  position: absolute;
+  top: 6rem;
+  left: 5rem;
+  width: calc(100% - 10rem);
+  height: calc(100% - 10rem);
+  overflow-y: scroll;
+  text-align: left;
 }
